# ember2024-fe-cpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  UP_AND_RUNNING.md  main.cpp
caching/: CMakeLists.txt
caching/include/: caching.h
caching/include/caching/: cached_function.h  is_cache.h  lru_cache.h  tuple_hash.h
common/: CMakeLists.txt
common/include/efe/: common.h
common/include/efe/common/: blockstream.h  bytecatcher.h  bytecounter.h  logging.h  memoryblockstream.h  meth.h  nop.h  shannonentropycalculator.h  slidingbytewindow.h
common/src/: blockstream.cpp  bytecatcher.cpp  bytecounter.cpp  memoryblockstream.cpp  meth.cpp  pefile.cpp  shannonentropycalculator.cpp  slidingbytewindow.cpp
core/: CMakeLists.txt  README.md
core/include/efe/: core.h
core/include/efe/core/: all_feature_types.h  common.h  f_authenticode_signature.h  f_base.h  f_byte_entropy_histogram.h  f_data_directories.h  f_exports_info.h  f_general_file_info.h  f_header_file_info.h  f_imports_info.h  f_pe_format_warnings.h  f_rich_header.h  f_section_info.h  f_string_extractor.h
core/include/efe/core/f_header_file_info/: all.h  coff_characteristics_encoding.h  dll_characteristics_encoding.h  dos_header_encoding.h  machine_type_encoding.h  subsystem_type_encoding.h
core/src/: all_feature_types.cpp  core.cpp  f_authenticode_signature.cpp  f_byte_entropy_histogram.cpp  f_data_directories.cpp  f_exports_info.cpp  f_general_file_info.cpp  f_header_file_info.cpp  f_imports_info.cpp  f_pe_format_warnings.cpp  f_rich_header.cpp  f_section_info.cpp  f_string_extractor.cpp
core/src/f_header_file_info/: coff_characteristics_encoding.cpp  dll_characteristics_encoding.cpp  dos_header_encoding.cpp  machine_type_encoding.cpp  subsystem_type_encoding.cpp
demo/: CMakeLists.txt
demo/src/: main.cpp
ember2024fe/: CMakeLists.txt
featurehasher/: CMakeLists.txt  README.md
featurehasher/include/efe/: featurehasher.h
featurehasher/src/: featurehasher.cpp  fh.cpp
lklist/: CMakeLists.txt
lklist/include/: lklist.h
lklist/src/: lklist.c
main/: CMakeLists.txt  main.cpp
murmur3/: CMakeLists.txt  README.md
murmur3/src/: murmur3.c
pefile/: CMakeLists.txt  README.md
pefile/include/efe/: pefile.h
pefile/include/efe/pefile/: coff_characteristics.h  coff_characteristics_declarations.h  common.h  data_directory.h  dll_characteristics.h  dll_characteristics_declarations.h  export_library.h  import_library.h  machine_types.h  machine_types_declarations.h  section.h  section_characteristics.h  section_characteristics_declarations.h  subsystem_types.h  subsystem_types_declarations.h
pefile/include/efe/pefile/headers/: coff_header.h  dos_header.h  optional_header.h
pefile/src/: coff_characteristics.cpp  data_directory.cpp  dll_characteristics.cpp  export_library.cpp  import_library.cpp  machine_types.cpp  pefile.cpp  section.cpp  section_characteristics.cpp
pefile/src/headers/: coff_header.cpp  dos_header.cpp  optional_header.cpp
tests/: CMakeLists.txt
tests/src/: e2e.test.cpp
